--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
@@ -11,12 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.35.0",
+    "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3",
+    "mongoose": "^7.1.1",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
-  }
+  },
+  "description": ""
 }
