--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "1.0.0",
   "type": "module",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
@@ -10,13 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.37.0",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.1.1",
+    "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1"
-  },
-  "description": ""
+  }
 }
